--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "bioRhytm",
+  "name": "bio-rhythm",
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "@capacitor/android": "^3.1.2",
     "@capacitor/app": "1.0.2",
-    "@capacitor/core": "3.1.2",
+    "@capacitor/core": "^3.1.2",
     "@capacitor/haptics": "1.0.2",
     "@capacitor/keyboard": "1.0.2",
+    "@capacitor/splash-screen": "^1.1.0",
     "@capacitor/status-bar": "1.0.2",
     "@ionic/react": "^5.5.0",
     "@ionic/react-router": "^5.5.0",
@@ -67,7 +69,7 @@
     ]
   },
   "devDependencies": {
-    "@capacitor/cli": "3.1.2",
+    "@capacitor/cli": "^3.1.2",
     "@ionic/lab": "3.2.10"
   },
   "description": "An Ionic project"
